sugar-presence-service (0.81.2-1) unstable; urgency=low

  * New upstream release.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 21 Jun 2008 01:27:39 +0200

sugar-presence-service (0.81.1-1) unstable; urgency=low

  * New upstream release.
  * Reorganize debian/copyright to only mention each license once.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 09 Jun 2008 12:43:04 +0200

sugar-presence-service (0.79.3-2) unstable; urgency=low

  * Have python-gobject build-dependency fallback to python-gtk2 older
    than 2.9 (it provided gobject back then).

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 24 Apr 2008 12:10:02 +0200

sugar-presence-service (0.79.3-1) unstable; urgency=low

  * New upstream release.
    Highlights:
    + always reset the reconnect timer when disconnected
  * Bump debhelper compatibility level to 6 (was 5).
  * Update local cdbs snippets:
    + Relax python-central and python-support build-dependencies in
      python-autotools.mk.
    + Strip any non-printable characters in copyright-check.mk.
  * Mention exact upstream Git source in debian/copyright.
  * Semi-auto-update debian/control to update build-dependencies:
      DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 24 Apr 2008 11:50:22 +0200

sugar-presence-service (0.79.2-1) unstable; urgency=low

  * New upstream release.
  * Update local cdbs snippets:
    + Update copyright-check cdbs snippet to store newline-delimited
      hints.  Update hints.
    + Drop wget options broken with recent versions of wget in
      update-tarball.mk.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 08 Apr 2008 05:02:41 +0200

sugar-presence-service (0.79.0-4) unstable; urgency=low

  * Update CDBS tweaks:
    + Add local python-autotools.mk (and drop py-compile.mk).
    + Update python-vars.mk and makefile.mk for improved DEB_*PACKAGES
      and build-dependency resolving.
    + Cosmetic updates to README.cdbs-tweaks.
  * Fix email address of OLPC Alioth team.