@@ -1,6 +1,10 @@
 sugar-presence-service (0.81.2-1) unstable; urgency=low
 
   * New upstream release.
+  * Update local cdbs snippets:
+    + Relax copyright-check to only warn about its discoveries.  Closes:
+      bug#486999.
+  * Update debian/copyright-hints.
 
  -- Jonas Smedegaard <dr@jones.dk>  Sat, 21 Jun 2008 01:27:39 +0200
 
